PRODUCT_NAME = "minimal"
PKG_NAME = "//projects/{}".format(PRODUCT_NAME)

# Allow access from the parent package only.
package(default_visibility = [
    "{}:__pkg__".format(PKG_NAME),
])

load("@cef//bazel/mac:app_helpers.bzl", "declare_all_helper_apps", "declare_main_app")

#
# MacOS app bundle target.
#

# Helper app bundles.
declare_all_helper_apps(
    name = PRODUCT_NAME,
    info_plist = "//projects/shared:helper-Info.plist.in",
    deps = [
        "{}:RendererLibMac".format(PKG_NAME),
    ],
)

# Main app bundle.
declare_main_app(
    name = PRODUCT_NAME,
    info_plist = "//projects/shared:Info.plist.in",
    deps = [
        "{}:BrowserLibMac".format(PKG_NAME),
    ],
    resources = [
        "{}:Resources".format(PKG_NAME),
        "//projects/shared:ResourcesMac",
    ]
)
